Arrange ui before login

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -7,6 +7,7 @@ ja:
         name: ニックネーム
         email: メールアドレス
         password: パスワード
-        password_confirmation: パスワードの確認
+        password_confirmation: パスワード(確認用)
         girl: 性別
         date_of_birth: 生年月日
+        agreement: 規約とプライバシーポリシー
