Renew a initial page

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -10,4 +10,4 @@ ja:
         password_confirmation: パスワード(確認用)
         girl: 性別
         date_of_birth: 生年月日
-        agreement: 規約とプライバシーポリシー
+        agreement: 年齢確認
